chandeliers-lus/tests/compile_fail/ui/tc/const/call.rs
chandeliers_lus::decl! {
    const X : float = float(5);
}

fn main() {}
