chandeliers-lus/tests/compile_fail/ui/tc/const/call.stderr
error: Function calls are not valid in const contexts
 --> tests/compile_fail/ui/tc/const/call.rs:2:5
  |
2 |     const X : float = float(5);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: You must put this definition inside a node
